ShoppingCart.getByUser improved
