# v1/doc/swagger.json
@@ -1281,6 +1281,48 @@
                 }
             }
         },
+        "/ShoppingCart/User/{idUser}/{idStore}": {
+            "get": {
+                "summary": "Get ShoppingCart by User id",
+                "description": "Return a unique ShoppingCart by User id.",
+                "tags": [
+                    "ShoppingCarts"
+                ],
+                "parameters": [
+                    {
+                        "name": "idUser",
+                        "in": "path",
+                        "type": "string",
+                        "required": true,
+                        "description": "Unique customer identifier to be used for experience customization."
+                    },
+                    {
+                        "name": "idStore",
+                        "in": "path",
+                        "type": "string",
+                        "required": true,
+                        "description": "Unique customer identifier to be used for experience customization."
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "An array of ShoppingCarts found",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ShoppingCart"
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "Unexpected error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
         "/ShoppingCartItem": {
             "parameters": [
                 {
@@ -1435,6 +1477,41 @@
                 "responses": {
                     "200": {
                         "description": "An array of ShoppingCartItems",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ShoppingCartItem"
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "Unexpected error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/ShoppingCartItem/ShoppingCart/{id}": {
+            "get": {
+                "summary": "Get ShoppingCartItem by ShoppingCart id",
+                "description": "Return a unique ShoppingCartItem by ShoppingCart id.",
+                "tags": [
+                    "ShoppingCartItems"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "type": "string",
+                        "required": true,
+                        "description": "Unique customer identifier to be used for experience customization."
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "An array of ShoppingCartItems found",
                         "schema": {
                             "type": "array",
                             "items": {
@@ -2707,6 +2784,20 @@
                     "type": "number",
                     "format": "double",
                     "description": "Purchased"
+                },
+                "unitPrice": {
+                    "type": "number",
+                    "format": "double",
+                    "description": "Unit Price"
+                },
+                "pictureUrl": {
+                    "type": "string",
+                    "description": "Picture Url"
+                },
+                "totalItem": {
+                    "type": "number",
+                    "format": "double",
+                    "description": "Sub Total"
                 },
                 "postDate": {
                     "type": "string",
